add some comments

--- a/exercises/01_agent_hello_world/exercise.ipynb
+++ b/exercises/01_agent_hello_world/exercise.ipynb
@@ -119,33 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "✅ Environment loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --quiet openai-agents httpx python-dotenv nest-asyncio\n",
     "\n",
-    "import os\n",
-    "import asyncio\n",
-    "import httpx\n",
-    "from dotenv import load_dotenv\n",
-    "from agents import Agent, Runner, function_tool\n",
-    "import nest_asyncio\n",
+    "import os  # Operating system interface for environment variables\n",
+    "import asyncio  # Async I/O support for running async functions\n",
+    "import httpx  # Modern async HTTP client for making API requests\n",
+    "from dotenv import load_dotenv  # Load environment variables from .env file\n",
+    "from agents import Agent, Runner, function_tool  # OpenAI Agents SDK components\n",
+    "import nest_asyncio  # Allow nested async event loops in Jupyter notebooks\n",
     "\n",
-    "# Load environment variables\n",
-    "load_dotenv()\n",
+    "load_dotenv()  # Read .env file and load variables into os.environ\n",
     "\n",
     "print(\"✅ Environment loaded\")"
    ]
@@ -170,21 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Weather tool defined with @function_tool\n",
-      "ℹ️  This tool makes real API calls to weather.gov\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "@function_tool\n",
-    "async def get_weather_alerts(state: str) -> str:\n",
+    "@function_tool  # Decorator to register this function as an agent tool\n",
+    "async def get_weather_alerts(state: str) -> str:  # Async function that takes state code and returns alert description\n",
     "    \"\"\"\n",
     "    Get current weather alerts for a US state from the National Weather Service.\n",
     "    \n",
@@ -197,43 +175,41 @@
     "    print(f\"🌐 Calling NWS API for state: {state}\")\n",
     "\n",
     "    try:\n",
-    "        # Call the National Weather Service API\n",
     "        # TODO fill in the url: https://api.weather.gov/alerts/active/area/\n",
-    "        url = f\"/{state.upper()}\"\n",
-    "        headers = {\"User-Agent\": \"OpenAI-Agents-Workshop (educational)\"}\n",
+    "        url = f\"/{state.upper()}\"  # Construct API URL with uppercase state code\n",
+    "        headers = {\"User-Agent\": \"OpenAI-Agents-Workshop (educational)\"}  # Set User-Agent header (NWS API requirement)\n",
     "\n",
-    "        async with httpx.AsyncClient() as client:\n",
-    "            response = await client.get(url, headers=headers, timeout=10.0)\n",
-    "            response.raise_for_status()\n",
+    "        async with httpx.AsyncClient() as client:  # Create async HTTP client with automatic cleanup\n",
+    "            response = await client.get(url, headers=headers, timeout=10.0)  # Make GET request with 10s timeout\n",
+    "            response.raise_for_status()  # Raise exception if HTTP status indicates error\n",
     "\n",
-    "            data = response.json()\n",
-    "            features = data.get(\"features\", [])\n",
+    "            data = response.json()  # Parse JSON response body\n",
+    "            features = data.get(\"features\", [])  # Extract features array (contains alerts), default to empty list\n",
     "\n",
-    "            if not features:\n",
+    "            if not features:  # Check if no alerts found\n",
     "                print(\"✅ No active alerts\")\n",
-    "                return f\"No active weather alerts for {state.upper()}.\"\n",
+    "                return f\"No active weather alerts for {state.upper()}.\"  # Return message indicating no alerts\n",
     "\n",
-    "            # Extract alert information\n",
-    "            alerts = []\n",
-    "            for feature in features[:5]:  # Limit to first 5 alerts\n",
-    "                properties = feature.get(\"properties\", {})\n",
-    "                event = properties.get(\"event\", \"Unknown\")\n",
-    "                headline = properties.get(\"headline\", \"No headline\")\n",
-    "                severity = properties.get(\"severity\", \"Unknown\")\n",
-    "                alerts.append(f\"- {event} ({severity}): {headline}\")\n",
+    "            alerts = []  # Initialize list to store formatted alert strings\n",
+    "            for feature in features[:5]:  # Loop through first 5 alerts only\n",
+    "                properties = feature.get(\"properties\", {})  # Get properties object from alert feature\n",
+    "                event = properties.get(\"event\", \"Unknown\")  # Extract alert event type\n",
+    "                headline = properties.get(\"headline\", \"No headline\")  # Extract alert headline text\n",
+    "                severity = properties.get(\"severity\", \"Unknown\")  # Extract severity level\n",
+    "                alerts.append(f\"- {event} ({severity}): {headline}\")  # Format and add to alerts list\n",
     "\n",
-    "            result = f\"Active weather alerts for {state.upper()}:\\n\" + \"\\n\".join(alerts)\n",
+    "            result = f\"Active weather alerts for {state.upper()}:\\n\" + \"\\n\".join(alerts)  # Combine header with all formatted alerts\n",
     "            print(f\"✅ Found {len(features)} alert(s)\")\n",
-    "            return result\n",
+    "            return result  # Return formatted alert string to agent\n",
     "\n",
-    "    except httpx.HTTPError as e:\n",
-    "        error_msg = f\"Failed to fetch weather alerts: {str(e)}\"\n",
+    "    except httpx.HTTPError as e:  # Catch HTTP-related errors (connection, timeout, 4xx/5xx status codes)\n",
+    "        error_msg = f\"Failed to fetch weather alerts: {str(e)}\"  # Create user-friendly error message\n",
     "        print(f\"❌ {error_msg}\")\n",
-    "        return error_msg\n",
-    "    except Exception as e:\n",
-    "        error_msg = f\"Unexpected error: {str(e)}\"\n",
+    "        return error_msg  # Return error to agent so it can inform user\n",
+    "    except Exception as e:  # Catch any other unexpected errors\n",
+    "        error_msg = f\"Unexpected error: {str(e)}\"  # Create generic error message\n",
     "        print(f\"❌ {error_msg}\")\n",
-    "        return error_msg\n",
+    "        return error_msg  # Return error to agent\n",
     "\n",
     "\n",
     "print(\"✅ Weather tool defined with @function_tool\")\n",
@@ -265,7 +241,7 @@
     "# TODO: Create an agent with the Agents SDK\n",
     "# Hint: docs: https://openai.github.io/openai-agents-python/tools/#function-tools\n",
     "# agent = Agent(\n",
-    "#     name=\"Weather Agent\",\n",
+    "#     name=\"Apple Sorting Agent\",\n",
     "#     instructions=\"You help users get weather alert information for US states\",\n",
     "#TODO: you can pass in a tool or an apple, which will you choose?\n",
     "#     tools=[]\n",
@@ -287,11 +263,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "if not api_key:\n",
-    "    raise RuntimeError(\"OPENAI_API_KEY is not set. Add it to your .env file.\")\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")  # Retrieve API key from environment variables\n",
+    "if not api_key:  # Check if API key is missing or empty\n",
+    "    raise RuntimeError(\"OPENAI_API_KEY is not set. Add it to your .env file.\")  # Stop execution with error message\n",
     "\n",
-    "masked_key = f\"{api_key[:4]}...{api_key[-4:]}\" if len(api_key) >= 8 else \"***\"\n",
+    "masked_key = f\"{api_key[:4]}...{api_key[-4:]}\" if len(api_key) >= 8 else \"***\"  # Show first/last 4 chars for verification without exposing full key\n",
     "print(f\"✅ OPENAI_API_KEY detected: {masked_key}\")"
    ]
   },
@@ -310,21 +286,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query: Are there any weather alerts for California?\n",
-      "\n",
-      "⚠️  Implement the TODOs above!\n",
-      "   Check the solution notebook for reference\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "async def run_agent():\n",
-    "    query = \"Are there any weather alerts for California?\"\n",
+    "async def run_agent():  # Define async function to execute agent\n",
+    "    query = \"Are there any weather alerts for California?\"  # Define user query to send to agent\n",
     "    print(f\"Query: {query}\\n\")\n",
     "    \n",
     "    # TODO: Run the agent using Runner.run()\n",
