--- a/exercises/01_agent_hello_world/exercise.ipynb
+++ b/exercises/01_agent_hello_world/exercise.ipynb
@@ -19,21 +19,7 @@
     "\n",
     "\n",
     "> **💡 Tip:** If you get stuck, check the solution notebook in the `solutions/` directory! Each exercise has a corresponding complete solution that you can reference.\n",
-    "## Prerequisites\n",
-    "\n",
-    "Before starting, ensure you have:\n",
-    "\n",
-    "1. **OpenAI API Key:** Add your key to `.env` in the project root:\n",
-    "   ```\n",
-    "   OPENAI_API_KEY=sk-your-key-here\n",
-    "   ```\n",
-    "\n",
-    "2. **Dependencies:** Already installed if you ran `make setup`\n",
-    "   - `openai-agents` - OpenAI Agents SDK\n",
-    "   - `httpx` - Async HTTP client\n",
-    "   - `python-dotenv` - Environment variable management\n",
-    "\n",
-    "3. **Internet Connection:** Required for real National Weather Service API calls"
+    "## Prerequisites"
    ]
   },
   {
