improve setup steps

--- a/exercises/01_agent_hello_world/exercise.ipynb
+++ b/exercises/01_agent_hello_world/exercise.ipynb
@@ -96,9 +96,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "Import required libraries and load environment variables.\n",
-    "\n",
-    "Select **Python 3.11**** if prompted:\n",
+    "Select **Python 3.11**** if prompted **after** running the installation cell (`pip install ...`) **below**:\n",
     "\n",
     "![Select Python 3.11 kernel](../../images/select-kernel.png)"
    ]
