fixing exercise 2 to match format

--- a/solutions/03_durable_agent/solution.ipynb
+++ b/solutions/03_durable_agent/solution.ipynb
@@ -5,7 +5,46 @@
    "id": "29834b7d",
    "metadata": {},
    "source": [
-    "# Exercise 3: Durable Agent — Solution\n\nComplete implementation combining **OpenAI Agents SDK** with **Temporal** for durability.\n\nThis solution demonstrates how Temporal automatically retries failed operations, making your AI agents resilient to network failures and other transient errors.\n\n## Architecture\n\nThis solution follows a **4-component pattern** that mirrors production Temporal applications:\n\n1. **`activities.py`** - Defines the weather activity\n2. **`workflow.py`** - Defines the workflow orchestration\n3. **`worker.py`** - Runs the worker that executes workflows/activities\n4. **`starter.py`** - Executes the workflow\n\nEach component is implemented in a separate Jupyter cell below for clarity.\n\n### Flow Diagram 🔄\n\n```\nUser Query 👤\n    ↓\nTemporal Workflow (orchestration layer) 🎭\n    ↓\nActivity: LLM interprets query and may choose tool 🤖\n    ↓\n[Tool chosen?]\n    ↓\nActivity: Execute get_weather tool 🔧\n    ↓\nExternal API Call (NWS) 🌐\n    ↓\nData returned to Agent 📊\n    ↓\nAgent leverages LLM to generate response 💬\n    ↓\nReturn to user ✅\n```\n\n**Each activity can retry independently, and the entire flow is durable!** 💪\n"
+    "# Exercise 3: Durable Agent — Solution\n",
+    "\n",
+    "Complete implementation combining **OpenAI Agents SDK** with **Temporal** for durability.\n",
+    "\n",
+    "This solution demonstrates how Temporal automatically retries failed operations, making your AI agents resilient to network failures and other transient errors.\n",
+    "\n",
+    "## Architecture\n",
+    "\n",
+    "This solution follows a **4-component pattern** that mirrors production Temporal applications:\n",
+    "\n",
+    "1. **`activities.py`** - Defines the weather activity\n",
+    "2. **`workflow.py`** - Defines the workflow orchestration\n",
+    "3. **`worker.py`** - Runs the worker that executes workflows/activities\n",
+    "4. **`starter.py`** - Executes the workflow\n",
+    "\n",
+    "Each component is implemented in a separate Jupyter cell below for clarity.\n",
+    "\n",
+    "### Flow Diagram 🔄\n",
+    "\n",
+    "```\n",
+    "User Query 👤\n",
+    "    ↓\n",
+    "Temporal Workflow (orchestration layer) 🎭\n",
+    "    ↓\n",
+    "Activity: LLM interprets query and may choose tool 🤖\n",
+    "    ↓\n",
+    "[Tool chosen?]\n",
+    "    ↓\n",
+    "Activity: Execute get_weather tool 🔧\n",
+    "    ↓\n",
+    "External API Call (NWS) 🌐\n",
+    "    ↓\n",
+    "Data returned to Agent 📊\n",
+    "    ↓\n",
+    "Agent leverages LLM to generate response 💬\n",
+    "    ↓\n",
+    "Return to user ✅\n",
+    "```\n",
+    "\n",
+    "**Each activity can retry independently, and the entire flow is durable!** 💪\n"
    ]
   },
   {
@@ -31,10 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "28f6609a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "✅ All imports successful\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --quiet temporalio openai-agents httpx nest-asyncio pytz\n",
     "\n",
@@ -67,10 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ac13ca86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Activity 'get_weather' defined\n"
+     ]
+    }
+   ],
    "source": [
     "async def make_api_call(state: str) -> dict:\n",
     "    \"\"\"Make API call to fetch weather alerts from National Weather Service.\"\"\"\n",
@@ -143,10 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "663a2ebc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Workflow 'WeatherAgentWorkflow' defined (task queue: agents-sdk-queue)\n"
+     ]
+    }
+   ],
    "source": [
     "# Define which task queue this workflow will use for communication\n",
     "TASK_QUEUE = \"agents-sdk-queue\"\n",
@@ -200,10 +267,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3e2q9zrqb2t",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 Worker running in background\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Worker started on task queue: agents-sdk-queue\n",
+      "   Listening for workflow and activity tasks...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error getting response: Error code: 401 - {'error': {'message': 'Missing bearer or basic authentication in header', 'type': 'invalid_request_error', 'param': None, 'code': None}}. (request_id: req_f3305a8b29f81a88205b59220da47069)\n",
+      "Completing activity as failed ({'activity_id': '1', 'activity_type': 'invoke_model_activity', 'attempt': 1, 'namespace': 'default', 'task_queue': 'agents-sdk-queue', 'workflow_id': 'weather-wed-nov-12-035451est', 'workflow_run_id': '019a79d9-8c2a-7dbd-862d-229c8b710f3a', 'workflow_type': 'WeatherAgentWorkflow'})\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_invoke_model_activity.py\", line 216, in invoke_model_activity\n",
+      "    return await model.get_response(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/agents/models/openai_responses.py\", line 90, in get_response\n",
+      "    response = await self._fetch_response(\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/agents/models/openai_responses.py\", line 306, in _fetch_response\n",
+      "    response = await self._client.responses.create(\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/openai/resources/responses/responses.py\", line 2275, in create\n",
+      "    return await self._post(\n",
+      "           ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/openai/_base_client.py\", line 1794, in post\n",
+      "    return await self.request(cast_to, opts, stream=stream, stream_cls=stream_cls)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/openai/_base_client.py\", line 1594, in request\n",
+      "    raise self._make_status_error_from_response(err.response) from None\n",
+      "openai.AuthenticationError: Error code: 401 - {'error': {'message': 'Missing bearer or basic authentication in header', 'type': 'invalid_request_error', 'param': None, 'code': None}}\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/worker/_activity.py\", line 297, in _handle_start_activity_task\n",
+      "    result = await self._execute_activity(start, running_activity, task_token)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/worker/_activity.py\", line 610, in _execute_activity\n",
+      "    return await impl.execute_activity(input)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_trace_interceptor.py\", line 284, in execute_activity\n",
+      "    return await self.next.execute_activity(input)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/worker/_activity.py\", line 805, in execute_activity\n",
+      "    return await input.fn(*input.args)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_heartbeat_decorator.py\", line 22, in wrapper\n",
+      "    return await fn(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_invoke_model_activity.py\", line 258, in invoke_model_activity\n",
+      "    raise ApplicationError(\n",
+      "temporalio.exceptions.ApplicationError: Non retryable OpenAI status code\n"
+     ]
+    }
+   ],
    "source": [
     "async def run_worker():  # Define async function to start and run the worker\n",
     "    \"\"\"Start a Temporal worker that listens for workflow and activity tasks.\"\"\"\n",
@@ -265,7 +397,51 @@
    "execution_count": null,
    "id": "jtkol3em4df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Starting workflow: weather-wed-nov-12-035451est\n",
+      "📝 Query: What weather alerts are active in CA?\n",
+      "\n",
+      "✅ Workflow started: weather-wed-nov-12-035451est\n",
+      "🔗 View in Temporal UI: http://localhost:8233/namespaces/default/workflows/weather-wed-nov-12-035451est\n",
+      "\n",
+      "⏳ Waiting for agent response...\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "WorkflowFailureError",
+     "evalue": "Workflow execution failed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mApplicationError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[31mApplicationError\u001b[39m: AuthenticationError: Error code: 401 - {'error': {'message': 'Missing bearer or basic authentication in header', 'type': 'invalid_request_error', 'param': None, 'code': None}}",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mApplicationError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[31mApplicationError\u001b[39m: Non retryable OpenAI status code",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mActivityError\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[31mActivityError\u001b[39m: Activity task failed",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mWorkflowFailureError\u001b[39m                      Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     46\u001b[39m     loop = asyncio.get_running_loop()\n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m# Execute in existing loop\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m run_solution()\n\u001b[32m     49\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m:\n\u001b[32m     50\u001b[39m     \u001b[38;5;66;03m# If no loop exists, create new one and run\u001b[39;00m\n\u001b[32m     51\u001b[39m     asyncio.run(run_solution())\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 35\u001b[39m, in \u001b[36mrun_solution\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m⏳ Waiting for agent response...\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     34\u001b[39m \u001b[38;5;66;03m# Wait for workflow to complete and get result (blocking)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m result = \u001b[38;5;28;01mawait\u001b[39;00m handle.result()\n\u001b[32m     37\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m60\u001b[39m)\n\u001b[32m     38\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m🤖 Agent Response:\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.11/site-packages/temporalio/client.py:1719\u001b[39m, in \u001b[36mWorkflowHandle.result\u001b[39m\u001b[34m(self, follow_runs, rpc_metadata, rpc_timeout)\u001b[39m\n\u001b[32m   1717\u001b[39m         hist_run_id = fail_attr.new_execution_run_id\n\u001b[32m   1718\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1719\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m WorkflowFailureError(\n\u001b[32m   1720\u001b[39m         cause=\u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m._client.data_converter.decode_failure(\n\u001b[32m   1721\u001b[39m             fail_attr.failure\n\u001b[32m   1722\u001b[39m         ),\n\u001b[32m   1723\u001b[39m     )\n\u001b[32m   1724\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m event.HasField(\u001b[33m\"\u001b[39m\u001b[33mworkflow_execution_canceled_event_attributes\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m   1725\u001b[39m     cancel_attr = event.workflow_execution_canceled_event_attributes\n",
+      "\u001b[31mWorkflowFailureError\u001b[39m: Workflow execution failed"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY is not set, skipping trace export\n"
+     ]
+    }
+   ],
    "source": [
     "async def run_solution():  # Define async function to execute the workflow\n",
     "    \"\"\"Execute the weather agent workflow.\"\"\"\n",
