--- a/temporal_installation.ipynb
+++ b/temporal_installation.ipynb
@@ -41,10 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "028e4a1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mtemporal:\u001b[0m Downloading Temporal CLI latest\n",
+      "Warning: Not enforcing strong cipher suites for TLS, this is potentially less secure\n",
+      "Warning: Not enforcing TLS v1.2, this is potentially less secure\n",
+      "\u001b[1mtemporal:\u001b[0m Temporal CLI installed at /home/vscode/.temporalio/bin/temporal\n",
+      "\u001b[1mtemporal:\u001b[0m For convenience, we recommend adding it to your PATH\n",
+      "\u001b[1mtemporal:\u001b[0m If using bash, run echo export PATH=\"\\$PATH:/home/vscode/.temporalio/bin\" >> ~/.bashrc\n"
+     ]
+    }
+   ],
    "source": [
     "# Install Temporal CLI\n",
     "# | label: temporal-cli-install\n",
@@ -76,7 +89,20 @@
    "execution_count": null,
    "id": "1bc4ec7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CLI 1.5.1 (Server 1.29.1, UI 2.42.1)\n",
+      "\n",
+      "Server:  localhost:7233\n",
+      "UI:      http://localhost:8233\n",
+      "Metrics: http://localhost:34361/metrics\n",
+      "time=2025-11-13T15:09:29.290 level=WARN msg=\"Critical attempts processing workflow task\" service=history shard-id=1 address=127.0.0.1:33027 wf-namespace=default wf-id=weather-thu-nov-13-100328est wf-run-id=019a7dbe-32d5-7946-ace3-7009517ff00f attempt=10\n"
+     ]
+    }
+   ],
    "source": [
     "# Start Temporal dev server\n",
     "#| label: temporal-start\n",
