remove bad comment

--- a/solutions/02_temporal_hello_world/solution.ipynb
+++ b/solutions/02_temporal_hello_world/solution.ipynb
@@ -193,7 +193,7 @@
     "    # Format timestamp as readable string with day-month-date-time pattern\n",
     "    workflow_id = f\"weather-{now.strftime('%a-%b-%d-%I%M%S').lower()}est\"\n",
     "\n",
-    "    # Connect to Temporal server with OpenAI Agents SDK plugin\n",
+    "    # Connect to Temporal server\n",
     "    client = await Client.connect(\n",
     "        \"localhost:7233\"  # Enable OpenAI Agents integration\n",
     "    )\n",
